[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawg-baas"
version = "0.1.1"
description = "Python SDK for BaaS (Browser as a Service) - managed headless browsers via CDP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "DAWG Team" }
]
keywords = ["browser", "headless", "cdp", "playwright", "automation", "scraping", "baas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dawgswarm/dawg_baas"
Repository = "https://github.com/dawgswarm/dawg_baas"
Issues = "https://github.com/dawgswarm/dawg_baas/issues"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dawg_baas"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
